[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Actors/cuck.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/cuck.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/Shadow.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.95524
height = 1.763

[sub_resource type="CircleShape2D" id=2]
radius = 64.2609

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.46189
height = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 21 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6, 7, 8 ]
}

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( -4, 1, 3, 1, 3, 7, -4, 7 )

[node name="Cuck" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -10.0406
margin_top = -5.9466
margin_right = -10.0406
margin_bottom = -5.9466
rect_scale = Vector2( 0.2, 0.2 )
pulse_color = Color( 0.54902, 0, 0, 1 )
flash_color = Color( 1, 0.270588, 0, 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 7.838 )
scale = Vector2( 0.315764, 0.172294 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 2 )
hframes = 8
vframes = 4
frame = 8
region_rect = Rect2( 1, 0, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.33484 )
shape = SubResource( 1 )

[node name="Wzrok" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( -0.117981, 4.09191 )
shape = SubResource( 2 )

[node name="Atak" type="Area2D" parent="."]
position = Vector2( -0.44545, 0.111362 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atak"]
position = Vector2( 0.723678, 2.72405 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 9 )

[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="Atak" to="." method="_on_Atak_body_entered"]
[connection signal="body_exited" from="Atak" to="." method="_on_Atak_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
